--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="row"><div class="items"><h2>10k+</h2> <h4>companies</h4> </div>
 <div class="items"><h2>314</h2> <h4>templates</h4> </div>
-<div class="items"><h2>12M+</h2> <h4>querie</h4> </div>  </div>
+<div class="items"><h2>12M+</h2> <h4>queries</h4> </div>  </div>
 </div>
 </div>  
 </div>
